--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           Dapp Portal	Dapp Portal
           Liff	Liff
           Blockchain	Blockchain
+          Unifi	Unifi 
           Gas Fee	가스비
           Reward	리워드
           Featured	피처드
